<resources>
    <string name="app_name">GeoXplore</string>
    <string name="ms_invalid_email">Incorrect e-mail adress.</string>
    <string name="ms_invalid_login">Your login must contains between 4 and 16 characters.</string>
    <string name="ms_different_passwords">Your repeated password must be the same as password.</string>
    <string name="ms_username_already_in_use">Username already in use.</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="token_mb">pk.eyJ1Ijoic29yeW8xIiwiYSI6ImNqZm8xdnkwMDBlY20zMnJxa3lxZzFqcGQifQ.mzqYTdHstDvURZNd-_ZLZg</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_map">Map</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="map_ranking">Ranking</string>
    <string name="map_logout">Logout</string>
    <string name="user_profile_boxes"><b>boxes</b></string>
    <string name="user_profile_budges"><b>budges</b></string>
    <string name="user_profile_friends"><b>friends</b></string>
    <string name="gained"><b>gained</b></string>
    <string name="user_location_permission_not_granted">user location permission not granted</string>
    <string name="click_on_box">OTWIERAM SKRZYNIE</string>
    <string name="map_home_set_msg">Saved home position!</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="open_box">Open box</string>
    <string name="back">Back</string>
    <string name="open_box_loot">Skrzynka została otworzona!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="rank">Rank</string>
    <string name="reset_home">Reset Home</string>
    <string name="menu_friends">Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="insert_name">Insert name!</string>
</resources>
