<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/location"
            android:title="@string/menu_map" />
         <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/friends_icon"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/id_card"
            android:title="@string/map_ranking" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/open_padlock"
            android:title="@string/map_logout" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/reset_home" />
    </group>

</menu>
